# iBOARCode

./: LICENSE  README.md  setup.sh  start.sh  stop.sh
LidarController/: Makefile  lidar_mqtt.cpp  mak_common.inc
MotorController/: .gitignore  CMakeLists.txt  Encoder.cpp  Encoder.h  MQTTHandler.cpp  MQTTHandler.h  MotorControl.cpp  MotorControl.h  MotorController.cpp  MotorController.h  PID.cpp  PID.h  main.cpp
NavigationService/: pom.xml
NavigationService/src/main/java/navigation/NavigationService/: MQTTHandler.java  ModeHandler.java  NavigationServiceApplication.java
NavigationService/src/main/java/navigation/NavigationService/modes/: DebugNavigate.java  SimpleNavigate.java  debugDistance.java
NavigationService/src/main/java/navigation/NavigationService/utils/: Angle.java  AngleUtils.java  Lidar.java  LidarNavigationDisplay.java  (+3 more)
NavigationService/src/main/resources/: application.properties
NavigationService/src/test/java/navigation/NavigationService/: NavigationServiceApplicationTests.java
api/: pom.xml
api/src/main/java/api/: MqttPublisher.java
api/src/main/java/api/websocket/: CommandWebSocketConfig.java  CommandWebSocketHandler.java  DataWebSocketConfig.java  DataWebSocketHandler.java  WebSocketConfig.java
api/src/main/java/boar/lidar/: LiDARService.java
api/src/main/java/boar/websocket/: LidarWebSocketHandler.java  WebSocketConfig.java
api/src/main/resources/: application.properties
api/src/main/resources/static/: general.css  general.js  index.html  motorsRenderer.html
testProgramms/: motor1Test.py  motor2Test.py  motor3Test.py
(+27 files in other folders)
